# Gila

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: assembly.rst  conf.py  elements.rst  index.rst  isotropicelasticconstants.rst
src/: gila.cpp  gila.hpp  main.cpp  pch.hpp
src/continuum/: isometricelastic.hpp  isotropicelastic.hpp
src/elements/: assembly.hpp  node.hpp  spar.hpp  spring.cpp  spring.hpp
src/observer/: CMakeLists.txt  observer.cpp  observer.hpp  subject.cpp  subject.hpp
src/render/: CMakeLists.txt  config.h.in  main.cpp  model.cpp  model.hpp  render.cpp  render.hpp  sketch.cpp
